pacman-route/pacman-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-blue
  labels:
    name: pacman-blue
    app.kubernetes.io/name: pacman-blue
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: pacman-blue
    app.kubernetes.io/name: pacman-blue
