pacman-route/pacman-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-green
  labels:
    name: pacman-green
    app.kubernetes.io/name: pacman-green
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: pacman-green
    app.kubernetes.io/name: pacman-green
