pacman-route/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pacman
  namespace: pacman-app
  labels:
    app.kubernetes.io/name: pacman
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
spec:
  path: "/"
  to:
    kind: Service
    name: pacman-blue
    weight: 50
  alternateBackends:
    - kind: Service
      name: pacman-green
      weight: 50
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
